[project]
name = "make-data-count-kaggle-competition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.3.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "seqeval>=1.2.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.10",
]
